# autoFlight

./: .gitignore  README.md
.kdev4/: Onboard-SDK-ROS-3.8.kdev4
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/dji_sdk/: ActivationRequest.h  ActivationResponse.h  CameraActionRequest.h  CameraActionResponse.h  DroneArmControlRequest.h  DroneArmControlResponse.h  DroneTaskControlRequest.h  DroneTaskControlResponse.h  FCTimeInUTC.h  FlightAnomaly.h  GPSUTC.h  Gimbal.h  MFIOConfigRequest.h  MFIOConfigResponse.h  MFIOSetValueRequest.h  MFIOSetValueResponse.h  MissionHotpointTask.h  MissionHpActionRequest.h  MissionHpActionResponse.h  MissionHpGetInfoRequest.h  MissionHpGetInfoResponse.h  MissionHpResetYawRequest.h  MissionHpResetYawResponse.h  MissionHpUpdateRadiusRequest.h  MissionHpUpdateRadiusResponse.h  MissionHpUpdateYawRateRequest.h  MissionHpUpdateYawRateResponse.h  MissionHpUploadRequest.h  MissionHpUploadResponse.h  MissionStatusRequest.h  MissionStatusResponse.h  MissionWaypoint.h  (+37 more)
src/: 到 autoControl 的链接
src/autoControl/: cacularVelocity.1.py  cacularVelocity.py  detectCircle.py  findAruco.sh  frames.gv  logtec_detectCircle.py  pubCam.py  rosmsg_gps.py  rosmsg_rtab.py  startCircleSensors.launch  startSensor.launch  startSensors.launch  startUAV.launch  uav.launch
src/autoControl/aruco-3.1.3/utils/: CMakeLists.txt  aruco_ros.cpp
src/dji_sdk_demo/: CMakeLists.txt
src/ultrasonic/: CMakeLists.txt  package.xml
src/ultrasonic/launch/: ultrasonic.launch
src/ultrasonic/nodes/: ultrasonic.cpp
src/ultrasonic/src/: protocal_uart_sdk.cpp
(+76 files in other folders)
